--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="quiz-container" id="quiz">
+		<section>
+			<p>Which language runs in a web browser?</p>
+			<div>
+				<input type="radio" value="java" id="a" name="pgm" class="answer" required><label for="quiz" id="a_text">Java</label>
+			</div>
+			<div>
+				<input type="radio" value="C" id="b" name="pgm" class="answer" required><label for="quiz" id="c_text">C</label>
+			</div>
+			<div>
+				<input type="radio" value="python" id="c" name="pgm" class="answer" required><label for="quiz" id="c_text">Python</label>
+			</div>
+			<div>
+				<input type="radio" value="javascript" id="d" name="pgm"class="answer" required><label for="quiz" id="d_text">Javascript</label>
+			</div>
+			<input type="button" value="submit">
+		</section>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
