--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 			<div>
 				<input type="radio" value="javascript" id="d" name="pgm"class="answer" required><label for="quiz" id="d_text">Javascript</label>
 			</div>
-			<input type="button" value="submit">
+			<input type="button" value="submit" class="check">
 		</section>
 	</div>
     <script type="text/javascript" src="./script.js">
